[gd_scene load_steps=10 format=2]

[ext_resource path="res://maps/test/beton.tga" type="Texture" id=1]
[ext_resource path="res://objects/boss.gd" type="Script" id=2]
[ext_resource path="res://objects/boss_weakpoint.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/boss_turret.tscn" type="PackedScene" id=4]

[sub_resource type="SphereShape" id=3]
radius = 10.0

[sub_resource type="SphereMesh" id=1]
radius = 10.0
height = 20.0
radial_segments = 32
rings = 16

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0.603922, 0.603922, 1 )
albedo_texture = ExtResource( 1 )
uv1_scale = Vector3( 0.5, 0.5, 0.5 )
uv1_triplanar = true

[sub_resource type="CubeMesh" id=4]
size = Vector3( 4, 6, 2 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 2, 3, 1 )

[node name="boss" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 16, 0 )
motion/sync_to_physics = true
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="mill" type="Spatial" parent="."]
transform = Transform( 0.984808, 0, 0.173648, 0, 1, 0, -0.173648, 0, 0.984808, 0, 0, 0 )

[node name="w1" type="Spatial" parent="mill"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -14, 0 )

[node name="w2" type="Spatial" parent="mill"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 14, 0 )

[node name="w3" type="Spatial" parent="mill"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -14, 0, 0 )

[node name="w4" type="Spatial" parent="mill"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 14, 0, 0 )

[node name="wall1" type="KinematicBody" parent="."]
transform = Transform( 0.928559, 0.371185, 0, -0.371185, 0.928559, 0, 0, 0, 1, -5.19659, -12.9998, 0 )
motion/sync_to_physics = true

[node name="MeshInstance" type="MeshInstance" parent="wall1"]
mesh = SubResource( 4 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="wall1"]
shape = SubResource( 5 )

[node name="wall2" type="KinematicBody" parent="."]
transform = Transform( 0.928559, 0.371185, 0, -0.371185, 0.928559, 0, 0, 0, 1, 5.19659, 12.9998, 0 )
motion/sync_to_physics = true

[node name="MeshInstance" type="MeshInstance" parent="wall2"]
mesh = SubResource( 4 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="wall2"]
shape = SubResource( 5 )

[node name="wall3" type="KinematicBody" parent="."]
transform = Transform( 0.371185, -0.928559, 0, 0.928559, 0.371185, 0, 0, 0, 1, -12.9998, 5.19659, 0 )
motion/sync_to_physics = true

[node name="MeshInstance" type="MeshInstance" parent="wall3"]
mesh = SubResource( 4 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="wall3"]
shape = SubResource( 5 )

[node name="wall4" type="KinematicBody" parent="."]
transform = Transform( 0.371185, -0.928559, 0, 0.928559, 0.371185, 0, 0, 0, 1, 12.9998, -5.19659, 0 )
motion/sync_to_physics = true

[node name="MeshInstance" type="MeshInstance" parent="wall4"]
mesh = SubResource( 4 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="wall4"]
shape = SubResource( 5 )

[node name="turrets" type="Spatial" parent="."]

[node name="turret5" parent="turrets" instance=ExtResource( 4 )]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0, 10.5 )

[node name="turret" parent="turrets" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 2.38419e-07, 0, 1, 0, -2.38419e-07, 0, 1, 0, 0, -10.5 )

[node name="turret2" parent="turrets" instance=ExtResource( 4 )]
transform = Transform( -2.8213e-07, 0, 1, 0, 1, 0, -1, 0, -2.8213e-07, -10.5, 0, 0 )

[node name="turret3" parent="turrets" instance=ExtResource( 4 )]
transform = Transform( 1.94708e-07, 0, -1, 0, 1, 0, 1, 0, 1.94708e-07, 10.5, 0, 0 )

[node name="weakpoint" type="Spatial" parent="."]
transform = Transform( 0.965926, -0.258819, 0, 0.25, 0.933013, 0.258819, -0.0669873, -0.25, 0.965926, 0, 0, 0 )

[node name="weakpoint" parent="weakpoint" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0 )

[connection signal="destroyed" from="weakpoint/weakpoint" to="." method="_on_weakpoint_destroyed"]
